# rtcms4j-core-api/src/main/resources/static/openapi/core-api.yaml
@@ -5,6 +5,9 @@ info:
 servers:
   - url: /api/v1
 
+security:
+  - bearerAuth: []
+
 paths:
   ########################
   # Managing namespaces: #
@@ -1229,6 +1232,12 @@ paths:
           $ref: '#/components/responses/InternalServerError'
 
 components:
+  securitySchemes:
+    bearerAuth:
+      type: http
+      scheme: bearer
+      bearerFormat: JWT
+
   responses:
     BadRequest:
       description: Wrong or unexpected
