# rtcms4j-core-server/src/main/kotlin/ru/enzhine/rtcms4j/core/security/dto/KeycloakPrincipal.kt
@@ -1,0 +1,13 @@
+package ru.enzhine.rtcms4j.core.security.dto
+
+import java.util.UUID
+
+data class KeycloakPrincipal(
+    val sub: UUID,
+    val username: String?,
+    val clientId: String?,
+    val roles: Set<String>,
+) {
+    val isClient: Boolean
+        get() = username == null
+}
